| Summary: | ASTERISK-26410: core: Asterisk 14 doesn't show the header in the console or verbose when starting | ||||
| Reporter: | Dan Jenkins (danjenkins) | Labels: | |||
| Date Opened: | 2016-09-27 14:28:01 | Date Closed: | 2016-09-28 18:36:23 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Core/Logging | ||
| Versions: | 14.0.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Reproduced with Josh
When entering the CLI, there isnt a header in the CLI and when starting Asterisk with verbosity, no verbose messages appear! | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-27 14:28:01.648-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Corey Farrell (coreyfarrell) 2016-09-27 16:19:04.971-0500 Fixes posted for review. Note this actually effects all verbose log messages produced before {{init_logger}} is run. | ||||